// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppLayout > подсвечивает каталог, добавление и редактирование 1`] = `
<div>
  <div
    class="ant-layout"
    style="min-height: 100vh; overflow-x: hidden;"
  >
    <header
      class="ant-layout-header"
      style="align-items: center; display: flex; gap: 24px; inset-inline: 0px; overflow: hidden; padding-inline: 24px; position: fixed; top: 0px; z-index: 100;"
    >
      <h4
        class="ant-typography"
        style="color: rgb(255, 255, 255); margin: 0px;"
      >
        Уход за растениями
      </h4>
      <ul
        class="ant-menu-overflow ant-menu ant-menu-root ant-menu-horizontal ant-menu-dark"
        data-menu-list="true"
        role="menu"
        style="flex: 1 1 0%; min-width: 0px;"
        tabindex="0"
      >
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item ant-menu-item-selected"
          data-menu-id="rc-menu-uuid-test-catalog"
          role="menuitem"
          style="opacity: 1; order: 0;"
          tabindex="-1"
        >
          <span
            aria-label="unordered-list"
            class="anticon anticon-unordered-list ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="unordered-list"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/"
            >
              Каталог
            </a>
          </span>
        </li>
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item"
          role="menuitem"
          style="opacity: 1; order: 1;"
          tabindex="-1"
        >
          <span
            aria-label="plus"
            class="anticon anticon-plus ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="plus"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
              />
              <path
                d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/add"
            >
              Добавить
            </a>
          </span>
        </li>
        <li
          aria-hidden="true"
          class="ant-menu-overflow-item ant-menu-overflow-item-rest ant-menu-submenu ant-menu-submenu-horizontal"
          role="none"
          style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
        >
          <div
            aria-controls="id"
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            data-menu-id="rc-menu-uuid-test-rc-menu-more"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </header>
    <main
      class="ant-layout-content"
      style="padding: 88px 24px 24px;"
    >
      <p>
        /
      </p>
    </main>
  </div>
</div>
`;

exports[`AppLayout > подсвечивает каталог, добавление и редактирование 2`] = `
<div>
  <div
    class="ant-layout"
    style="min-height: 100vh; overflow-x: hidden;"
  >
    <header
      class="ant-layout-header"
      style="align-items: center; display: flex; gap: 24px; inset-inline: 0px; overflow: hidden; padding-inline: 24px; position: fixed; top: 0px; z-index: 100;"
    >
      <h4
        class="ant-typography"
        style="color: rgb(255, 255, 255); margin: 0px;"
      >
        Уход за растениями
      </h4>
      <ul
        class="ant-menu-overflow ant-menu ant-menu-root ant-menu-horizontal ant-menu-dark"
        data-menu-list="true"
        role="menu"
        style="flex: 1 1 0%; min-width: 0px;"
        tabindex="0"
      >
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item"
          data-menu-id="rc-menu-uuid-test-catalog"
          role="menuitem"
          style="opacity: 1; order: 0;"
          tabindex="-1"
        >
          <span
            aria-label="unordered-list"
            class="anticon anticon-unordered-list ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="unordered-list"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/"
            >
              Каталог
            </a>
          </span>
        </li>
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="opacity: 1; order: 1;"
          tabindex="-1"
        >
          <span
            aria-label="plus"
            class="anticon anticon-plus ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="plus"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
              />
              <path
                d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/add"
            >
              Добавить
            </a>
          </span>
        </li>
        <li
          aria-hidden="true"
          class="ant-menu-overflow-item ant-menu-overflow-item-rest ant-menu-submenu ant-menu-submenu-horizontal ant-menu-submenu-selected"
          role="none"
          style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
        >
          <div
            aria-controls="id"
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            data-menu-id="rc-menu-uuid-test-rc-menu-more"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </header>
    <main
      class="ant-layout-content"
      style="padding: 88px 24px 24px;"
    >
      <p>
        /add
      </p>
    </main>
  </div>
</div>
`;

exports[`AppLayout > подсвечивает каталог, добавление и редактирование 3`] = `
<div>
  <div
    class="ant-layout"
    style="min-height: 100vh; overflow-x: hidden;"
  >
    <header
      class="ant-layout-header"
      style="align-items: center; display: flex; gap: 24px; inset-inline: 0px; overflow: hidden; padding-inline: 24px; position: fixed; top: 0px; z-index: 100;"
    >
      <h4
        class="ant-typography"
        style="color: rgb(255, 255, 255); margin: 0px;"
      >
        Уход за растениями
      </h4>
      <ul
        class="ant-menu-overflow ant-menu ant-menu-root ant-menu-horizontal ant-menu-dark"
        data-menu-list="true"
        role="menu"
        style="flex: 1 1 0%; min-width: 0px;"
        tabindex="0"
      >
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item ant-menu-item-selected"
          data-menu-id="rc-menu-uuid-test-catalog"
          role="menuitem"
          style="opacity: 1; order: 0;"
          tabindex="-1"
        >
          <span
            aria-label="unordered-list"
            class="anticon anticon-unordered-list ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="unordered-list"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/"
            >
              Каталог
            </a>
          </span>
        </li>
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item"
          role="menuitem"
          style="opacity: 1; order: 1;"
          tabindex="-1"
        >
          <span
            aria-label="plus"
            class="anticon anticon-plus ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="plus"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
              />
              <path
                d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/add"
            >
              Добавить
            </a>
          </span>
        </li>
        <li
          aria-hidden="true"
          class="ant-menu-overflow-item ant-menu-overflow-item-rest ant-menu-submenu ant-menu-submenu-horizontal"
          role="none"
          style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
        >
          <div
            aria-controls="id"
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            data-menu-id="rc-menu-uuid-test-rc-menu-more"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </header>
    <main
      class="ant-layout-content"
      style="padding: 88px 24px 24px;"
    >
      <p>
        /plants/plant-1/edit
      </p>
    </main>
  </div>
</div>
`;

exports[`AppLayout > подсвечивает каталог, добавление и редактирование 4`] = `
<div>
  <div
    class="ant-layout"
    style="min-height: 100vh; overflow-x: hidden;"
  >
    <header
      class="ant-layout-header"
      style="align-items: center; display: flex; gap: 24px; inset-inline: 0px; overflow: hidden; padding-inline: 24px; position: fixed; top: 0px; z-index: 100;"
    >
      <h4
        class="ant-typography"
        style="color: rgb(255, 255, 255); margin: 0px;"
      >
        Уход за растениями
      </h4>
      <ul
        class="ant-menu-overflow ant-menu ant-menu-root ant-menu-horizontal ant-menu-dark"
        data-menu-list="true"
        role="menu"
        style="flex: 1 1 0%; min-width: 0px;"
        tabindex="0"
      >
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item"
          data-menu-id="rc-menu-uuid-test-catalog"
          role="menuitem"
          style="opacity: 1; order: 0;"
          tabindex="-1"
        >
          <span
            aria-label="unordered-list"
            class="anticon anticon-unordered-list ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="unordered-list"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/"
            >
              Каталог
            </a>
          </span>
        </li>
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item"
          role="menuitem"
          style="opacity: 1; order: 1;"
          tabindex="-1"
        >
          <span
            aria-label="plus"
            class="anticon anticon-plus ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="plus"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
              />
              <path
                d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/add"
            >
              Добавить
            </a>
          </span>
        </li>
        <li
          aria-hidden="true"
          class="ant-menu-overflow-item ant-menu-overflow-item-rest ant-menu-submenu ant-menu-submenu-horizontal"
          role="none"
          style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
        >
          <div
            aria-controls="id"
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            data-menu-id="rc-menu-uuid-test-rc-menu-more"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </header>
    <main
      class="ant-layout-content"
      style="padding: 88px 24px 24px;"
    >
      <p>
        /missing
      </p>
    </main>
  </div>
</div>
`;

exports[`AppLayout > рисует слот шапки и переходит в добавление 1`] = `
<div>
  <div
    class="ant-layout"
    style="min-height: 100vh; overflow-x: hidden;"
  >
    <header
      class="ant-layout-header"
      style="align-items: center; display: flex; gap: 24px; inset-inline: 0px; overflow: hidden; padding-inline: 24px; position: fixed; top: 0px; z-index: 100;"
    >
      <h4
        class="ant-typography"
        style="color: rgb(255, 255, 255); margin: 0px;"
      >
        Уход за растениями
      </h4>
      <ul
        class="ant-menu-overflow ant-menu ant-menu-root ant-menu-horizontal ant-menu-dark"
        data-menu-list="true"
        role="menu"
        style="flex: 1 1 0%; min-width: 0px;"
        tabindex="0"
      >
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item ant-menu-item-selected"
          data-menu-id="rc-menu-uuid-test-catalog"
          role="menuitem"
          style="opacity: 1; order: 0;"
          tabindex="-1"
        >
          <span
            aria-label="unordered-list"
            class="anticon anticon-unordered-list ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="unordered-list"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/"
            >
              Каталог
            </a>
          </span>
        </li>
        <li
          aria-describedby="id"
          class="ant-menu-overflow-item ant-menu-item"
          role="menuitem"
          style="opacity: 1; order: 1;"
          tabindex="-1"
        >
          <span
            aria-label="plus"
            class="anticon anticon-plus ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="plus"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
              />
              <path
                d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            <a
              data-discover="true"
              href="/add"
            >
              Добавить
            </a>
          </span>
        </li>
        <li
          aria-hidden="true"
          class="ant-menu-overflow-item ant-menu-overflow-item-rest ant-menu-submenu ant-menu-submenu-horizontal"
          role="none"
          style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
        >
          <div
            aria-controls="id"
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            data-menu-id="rc-menu-uuid-test-rc-menu-more"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        aria-hidden="true"
        style="display: none;"
      />
      <div
        style="flex-shrink: 0;"
      >
        <span>
          Погода
        </span>
      </div>
    </header>
    <main
      class="ant-layout-content"
      style="padding: 88px 24px 24px;"
    >
      <p>
        Контент
      </p>
    </main>
  </div>
</div>
`;
